--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -21,6 +21,8 @@
     <link href="~/Content/Admin Template/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
 
 
     <!-- Custom styles for this template-->
@@ -51,7 +53,7 @@
 
                                 <div class="p-2">
                                     <div class="text-center" id="welcome">
-                                        <h3 class=" mb-4">Welcome To Department Of CSE</h3>
+                                        <h3 class=" mb-4">Department Of Computer Science & Engineering</h3>
 
 
                                     </div>
@@ -71,12 +73,12 @@
                                         <div class="form-group">
                                             <input type="password" class="form-control form-control-user" id="password" name="password" placeholder="Password">
                                         </div>
-                                        <div class="form-group">
+                                        @*<div class="form-group">
                                             <div class="custom-control custom-checkbox small">
                                                 <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label" for="customCheck">Remember Me</label>
+                                                <label class="custom-control-label text-gray-900" for="customCheck">Remember Me</label>
                                             </div>
-                                        </div>
+                                        </div>*@
 
                                         <input type="submit" value="Login" class="btn btn-default btn-user btn-block btn-info " />}
 
