--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -51,9 +51,9 @@
 
                             <div class="col-lg-6">
 
-                                <div class="p-2">
+                                <div class="p-0">
                                     <div class="text-center" id="welcome">
-                                        <h3 class=" mb-4">Department Of Computer Science & Engineering</h3>
+                                        <h3 class=" mb-2">Computer Science & Engineering Department</h3>
 
 
                                     </div>
@@ -68,19 +68,20 @@
                                         @Html.AntiForgeryToken()
 
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user" id="email" name="email" aria-describedby="emailHelp" placeholder="Enter Email Address...">
+                                            <input type="email" class="form-control form-control-user" id="email" name="email" aria-describedby="emailHelp" placeholder="Enter Email Address">
                                         </div>
                                         <div class="form-group">
                                             <input type="password" class="form-control form-control-user" id="password" name="password" placeholder="Password">
                                         </div>
-                                        @*<div class="form-group">
+                                        <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
                                                 <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label text-gray-900" for="customCheck">Remember Me</label>
+                                                <label class="custom-control-label text-black-50" for="customCheck">Remember Me</label>
                                             </div>
-                                        </div>*@
-
-                                        <input type="submit" value="Login" class="btn btn-default btn-user btn-block btn-info " />}
+                                        </div>
+                                  
+                                        <input type="submit" value="Login" class="btn btn-default btn-user btn-block btn-info " />
+                                     }
 
 
                                 </div>
