--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -72,9 +72,9 @@
                                 <div id="collapseUser" class="collapse" aria-labelledby="headingUser" data-parent="#accordionSidebar">
                                     <div class="bg-white py-2 collapse-inner rounded">
 
-                                        @Html.ActionLink("User Type Registration", "#", "#", null, new { @class = "collapse-item" })
+                                        @Html.ActionLink("User Type Registration", "Index", "usertypes", null, new { @class = "collapse-item" })
 
-                                        @Html.ActionLink("User Registration", "#", "#", null, new { @class = "collapse-item" })
+                                        @Html.ActionLink("User Registration", "Index", "users", null, new { @class = "collapse-item" })
 
                                     </div>
 
@@ -402,7 +402,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; <b>Jashore University Of Science & Technology</b></span>
+                        <span><b>Copyright-2020&copy; Computer Science & Engineering Department</b></span>
                     </div>
                 </div>
             </footer>
