--- a/Views/usertypes/Create.cshtml
+++ b/Views/usertypes/Create.cshtml
@@ -1,11 +1,12 @@
 ﻿@model DatabaseAccess.usertype
-
+<br />
+<br />
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create New Usertype";
 }
 
-<h2>Create UserType</h2>
-
+<h4 class="m-0 font-weight-bold text-primary">Create New UserType Here :</h4>
+<br />
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -15,7 +16,7 @@
         <br>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.usertype_id, "Enter User Type", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.usertype_id, "ID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-5">
                 @Html.EditorFor(model => model.usertype_id, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.usertype_id, "", new { @class = "text-danger" })
@@ -33,12 +34,10 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-success text-left" />
-                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
+                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-warning" })
             </div>
         </div>
 
     </div>
-  
+
 }
-
-
