--- a/Views/usertypes/Edit.cshtml
+++ b/Views/usertypes/Edit.cshtml
@@ -1,44 +1,43 @@
 ﻿@model DatabaseAccess.usertype
-
+<br />
+<br />
 @{
-    ViewBag.Title = "Edit UserType";
+    ViewBag.Title = "Edit UserType Information";
 }
 
-<h2>Edit UserType</h2>
-
+<h4 class="m-0 font-weight-bold text-primary">Edit UserType Information Here :</h4>
+<br />
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal card shadow mb-4">
+    <div class="form-horizontal card shadow mb-4">
 
-    <br>
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.usertype_id, "Enter User Type", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-5">
-            @Html.EditorFor(model => model.usertype_id, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.usertype_id, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.usertype_name, "Name", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-5">
-            @Html.EditorFor(model => model.usertype_name, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.usertype_name, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Update" class="btn btn-success text-left" />
-            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
+        <br>
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.usertype_id, "ID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.usertype_id, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.usertype_id, "", new { @class = "text-danger" })
+            </div>
         </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.usertype_name, "Name", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.usertype_name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.usertype_name, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Update" class="btn btn-success text-left" />
+                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-warning" })
+            </div>
+
+        </div>
+
     </div>
-   
-</div>
 }
-
-
