--- a/Views/usertypes/Index.cshtml
+++ b/Views/usertypes/Index.cshtml
@@ -1,14 +1,15 @@
 ﻿@model IEnumerable<DatabaseAccess.usertype>
-
+<br />
+<br />
 @{
-    ViewBag.Title = "UserType";
+    ViewBag.Title = "UserType Information";
 }
 
 
 
 <div class="card shadow mb-4">
     <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary">User Types Table </h6>
+        <h4 class="m-0 font-weight-bold text-primary">User Type Information : </h4>
 
 
 
@@ -55,10 +56,10 @@
 
             </table>
             <p>
-                <b>To Create A New Usertype Click Here--></b> @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-success" })
-
+                <h5 class="m-0 font-weight-bold text-primary">
+                    To Create A New Usertype Click Here--> @Html.ActionLink("Create", "Create", null, new { @class = "btn btn-success" })
+                </h5>
             </p>
         </div>
     </div>
 </div>
-
