--- a/Views/users/Create.cshtml
+++ b/Views/users/Create.cshtml
@@ -1,8 +1,9 @@
 ﻿@model DatabaseAccess.user
-
+@using Cse_Just_Web_App.Models
 @{
     ViewBag.Title = "User Registration";
 }
+
 
 
 @using (Html.BeginForm("Create", "users", FormMethod.Post, new { enctype = "multipart/form-data" }))
@@ -12,7 +13,7 @@
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="card mb-4 shadow">
-            <div class="card-header">Student Information</div>
+            <div class="card-header">User Information</div>
 
             <div class="card-body">
 
@@ -20,7 +21,7 @@
                     <div class="col-md-6">
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.first_name, "First Name:",htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.first_name, "First Name:", htmlAttributes: new { @class = "control-label" })
 
                             @Html.EditorFor(model => model.first_name, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.first_name, "", new { @class = "text-danger" })
@@ -31,7 +32,7 @@
                     <div class="col-md-6">
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.last_name, "Last Name:",htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.last_name, "Last Name:", htmlAttributes: new { @class = "control-label" })
 
                             @Html.EditorFor(model => model.last_name, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.last_name, "", new { @class = "text-danger" })
@@ -46,7 +47,7 @@
                     <div class="col-md-6">
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.birth_date, "Birth Date:",htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.birth_date, "Birth Date:", htmlAttributes: new { @class = "control-label" })
 
                             @Html.EditorFor(model => model.birth_date, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.birth_date, "", new { @class = "text-danger" })
@@ -57,7 +58,7 @@
                     <div class="col-md-6">
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.contact_no, "Contact No:",htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.contact_no, "Contact No:", htmlAttributes: new { @class = "control-label" })
 
                             @Html.EditorFor(model => model.contact_no, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.contact_no, "", new { @class = "text-danger" })
@@ -70,7 +71,7 @@
                     <div class="col-md-6">
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.email_address,"Email Address" ,htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.email_address, "Email Address", htmlAttributes: new { @class = "control-label" })
 
                             @Html.EditorFor(model => model.email_address, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.email_address, "", new { @class = "text-danger" })
@@ -83,7 +84,7 @@
                     <div class="col-md-6">
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.current_address, "Current Address",htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.current_address, "Current Address", htmlAttributes: new { @class = "control-label" })
 
                             @Html.EditorFor(model => model.current_address, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.current_address, "", new { @class = "text-danger" })
@@ -98,7 +99,7 @@
                     <div class="col-md-6">
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.permanent_address, "Permanent Address",htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.permanent_address, "Permanent Address", htmlAttributes: new { @class = "control-label" })
 
                             @Html.EditorFor(model => model.permanent_address, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.permanent_address, "", new { @class = "text-danger" })
@@ -109,11 +110,15 @@
                     <div class="col-md-6">
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.gender,"Gender" ,htmlAttributes: new { @class = "control-label" })
-                            @Html.EditorFor(model => model.gender, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.LabelFor(model => model.gender, "Gender", htmlAttributes: new { @class = "control-label" })
+
+                            @Html.DropDownListFor(m => m.gender,
+                                      new SelectList(Enum.GetValues(typeof(Gender))), "Select Gender")
+
+                            @*@Html.EditorFor(model => model.gender, new { htmlAttributes = new { @class = "form-control" } })*@
                             @Html.ValidationMessageFor(model => model.gender, "", new { @class = "text-danger" })
                         </div>
-                        
+
                     </div>
                 </div>
 
@@ -122,7 +127,7 @@
                     <div class="col-md-6">
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.blood_group, "Blood Group",htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.blood_group, "Blood Group", htmlAttributes: new { @class = "control-label" })
 
                             @Html.EditorFor(model => model.blood_group, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.blood_group, "", new { @class = "text-danger" })
@@ -133,9 +138,11 @@
                     <div class="col-md-6">
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.religion, "Religion",htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.religion, "Religion", htmlAttributes: new { @class = "control-label" })
+                            @Html.DropDownListFor(m => m.religion,
+                                     new SelectList(Enum.GetValues(typeof(Religion))), "Select Religion")
 
-                            @Html.EditorFor(model => model.religion, new { htmlAttributes = new { @class = "form-control" } })
+                            @*@Html.EditorFor(model => model.religion, new { htmlAttributes = new { @class = "form-control" } })*@
                             @Html.ValidationMessageFor(model => model.religion, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -146,7 +153,7 @@
                     <div class="col-md-6">
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.nationality, "Nationality",htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.nationality, "Nationality", htmlAttributes: new { @class = "control-label" })
 
                             @Html.EditorFor(model => model.nationality, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.nationality, "", new { @class = "text-danger" })
@@ -157,7 +164,7 @@
                     <div class="col-md-6">
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.profile_pic, "Profile Picture",htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.profile_pic, "Profile Picture", htmlAttributes: new { @class = "control-label" })
 
                             @Html.EditorFor(model => model.profile_pic, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.profile_pic, "", new { @class = "text-danger" })
@@ -171,40 +178,51 @@
                     <div class="col-md-6">
 
                         <div class="form-group">
-                            @Html.LabelFor(model => model.password, "Password",htmlAttributes: new { @class = "control-label" })
+                            @Html.LabelFor(model => model.password, "Password", htmlAttributes: new { @class = "control-label" })
 
                             @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
 
                         </div>
                     </div>
-                </div>
-                <div class="row">
-
-
                     <div class="col-md-6">
-                        <div class="col-md-offset-2 col-md-10 text-right">
-                            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-warning" })
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.usertype_id, "usertype", htmlAttributes: new { @class = "control-label" })
+
+                            @Html.DropDownList("usertype_id", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.usertype_id, "", new { @class = "text-danger" })
+
+                        </div>
+                    </div>
+                </div>
+
+
+                    <div class="row">
+
+
+                        <div class="col-md-6">
+                            <div class="col-md-offset-2 col-md-10 text-right">
+                                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-warning" })
+                            </div>
+
                         </div>
 
-                    </div>
 
+                        <div class="col-md-6">
 
-                    <div class="col-md-6">
-
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Submit" class="btn btn-success" />
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <input type="submit" value="Submit" class="btn btn-success" />
+                                </div>
                             </div>
                         </div>
+
+
                     </div>
 
-
                 </div>
-
-            </div>
 
         </div>
 
     </div>
- }
+}
