--- a/Views/usertypes/Delete.cshtml
+++ b/Views/usertypes/Delete.cshtml
@@ -37,7 +37,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-danger" />
-            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-warning" })
+            @Html.ActionLink("Back To List", "Index", null, new { @class = "btn btn-warning" })
 
         </div>
     }
