--- a/Views/users/Delete.cshtml
+++ b/Views/users/Delete.cshtml
@@ -1,18 +1,19 @@
 ﻿@model DatabaseAccess.user
 
+<br />
+<br />
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete User Information";
 }
 
-<h2>Delete</h2>
+<h4 class="m-0 font-weight-bold text-primary">Are You Sure You Want To Delete This User?</h4>
+<br />
+<div class="card shadow mb-4">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>user</h4>
-    <hr />
     <dl class="dl-horizontal">
+        <br />
         <dt>
-            @Html.DisplayNameFor(model => model.first_name)
+            First Name
         </dt>
 
         <dd>
@@ -20,7 +21,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.last_name)
+            Last Name
         </dt>
 
         <dd>
@@ -28,7 +29,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.birth_date)
+            Date Of Birth
         </dt>
 
         <dd>
@@ -36,7 +37,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.contact_no)
+            Contact No
         </dt>
 
         <dd>
@@ -44,7 +45,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.email_address)
+            Email Address
         </dt>
 
         <dd>
@@ -52,7 +53,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.password)
+            Password
         </dt>
 
         <dd>
@@ -60,7 +61,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.current_address)
+            Current Address
         </dt>
 
         <dd>
@@ -68,7 +69,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.permanent_address)
+            Permanent Address
         </dt>
 
         <dd>
@@ -76,7 +77,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.gender)
+            Gender
         </dt>
 
         <dd>
@@ -84,7 +85,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.blood_group)
+            Blood Group
         </dt>
 
         <dd>
@@ -92,7 +93,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.religion)
+            Religion
         </dt>
 
         <dd>
@@ -100,7 +101,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.nationality)
+            Nationality
         </dt>
 
         <dd>
@@ -108,15 +109,18 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.profile_pic)
+            Profile Picture
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.profile_pic)
+            @{ string imagepath = Model.profile_pic;
+                <img src="@Url.Content(imagepath)" alt="Image" style="width:100px;height:150px;max-width:100%;height:auto" />
+            }
+            @*@Html.DisplayFor(model => model.profile_pic)*@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.usertype.usertype_name)
+            UserType Name
         </dt>
 
         <dd>
@@ -125,12 +129,15 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-warning" })
         </div>
+
     }
+    <br />
 </div>
