--- a/Views/users/Details.cshtml
+++ b/Views/users/Details.cshtml
@@ -1,17 +1,19 @@
 ﻿@model DatabaseAccess.user
 
+<br />
+<br />
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "User Details";
 }
 
-<h2>Details</h2>
+<h4 class="m-0 font-weight-bold text-primary">User Details :</h4>
+<br />
 
-<div>
-    <h4>user</h4>
-    <hr />
+<div class="card shadow mb-4">
+    <br />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.first_name)
+            First Name
         </dt>
 
         <dd>
@@ -19,7 +21,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.last_name)
+            Last Name
         </dt>
 
         <dd>
@@ -27,7 +29,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.birth_date)
+            Date Of Birth
         </dt>
 
         <dd>
@@ -35,7 +37,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.contact_no)
+            Contact No
         </dt>
 
         <dd>
@@ -43,7 +45,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.email_address)
+            Email Address
         </dt>
 
         <dd>
@@ -51,7 +53,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.password)
+            Password
         </dt>
 
         <dd>
@@ -59,7 +61,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.current_address)
+            Current Address
         </dt>
 
         <dd>
@@ -67,7 +69,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.permanent_address)
+            Permanent Address
         </dt>
 
         <dd>
@@ -75,7 +77,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.gender)
+            Gender
         </dt>
 
         <dd>
@@ -83,7 +85,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.blood_group)
+            Blood Group
         </dt>
 
         <dd>
@@ -91,7 +93,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.religion)
+            Religion
         </dt>
 
         <dd>
@@ -99,7 +101,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.nationality)
+            Nationality
         </dt>
 
         <dd>
@@ -107,15 +109,17 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.profile_pic)
+            Profile Picture
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.profile_pic)
+            @{ string imagepath = Model.profile_pic;
+                <img src="@Url.Content(imagepath)" alt="Image" style="width:100px;height:150px;max-width:100%;height:auto" />
+            }
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.usertype.usertype_name)
+            UserType Name
         </dt>
 
         <dd>
@@ -123,8 +127,8 @@
         </dd>
 
     </dl>
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = Model.user_id }, new { @class = "btn btn-info" })
+        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-warning" })
+    </p>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.user_id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
