--- a/Views/usertypes/Create.cshtml
+++ b/Views/usertypes/Create.cshtml
@@ -34,7 +34,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-success text-left" />
-                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-warning" })
+                @Html.ActionLink("Back To List", "Index", null, new { @class = "btn btn-warning" })
             </div>
         </div>
 
