--- a/Views/usertypes/Details.cshtml
+++ b/Views/usertypes/Details.cshtml
@@ -32,6 +32,6 @@
 
     <p>
         @Html.ActionLink("Edit", "Edit", new { id = Model.usertype_id }, new { @class = "btn btn-info" })
-        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-warning" })
+        @Html.ActionLink("Back To List", "Index", null, new { @class = "btn btn-warning" })
     </p>
 </div>
